Updated style issues on small screens

--- a/weppyweb/static/main.css
+++ b/weppyweb/static/main.css
@@ -215,12 +215,14 @@ th {
     position: absolute;
     left: 0;
     margin: 4px;
-    margin-left: 24px;
+    margin-left: 20px;
+    font-size: 0.92em;
 }
 
 .navigator-right {
     position: absolute;
     right: 0;
     margin: 4px;
-    margin-right: 24px;
+    margin-right: 20px;
+    font-size: 0.92em;
 }
